Change to List.of rather than Arrays.asList because it is a List whose values ​​do not change.